--- a/海龟汤.html
+++ b/海龟汤.html
@@ -156,7 +156,7 @@
   </div>
   <script>
     // DeepSeek API Key
-    const API_KEY = 'sk-d2fd1d7b48ba4009a64dd73b5fb37314'; // 用户提供的DeepSeek API密钥
+    const API_KEY = 'sk-xxxxxxxxxxxxxxxxx'; // 用户提供的DeepSeek API密钥
     const API_URL = 'https://api.deepseek.com'; // DeepSeek官方API地址
 
     // 本地海龟汤题库
